--- a/link_list.html
+++ b/link_list.html
@@ -163,6 +163,10 @@
 <li><a href='https://g11.gogamefun.com/bedroom/20250822_214457_18.html' target='_blank'>https://g11.gogamefun.com/bedroom/20250822_214457_18.html</a></li>
 <li><a href='https://g11.gogamefun.com/bedroom/20250822_214457_19.html' target='_blank'>https://g11.gogamefun.com/bedroom/20250822_214457_19.html</a></li>
 <li><a href='https://g11.gogamefun.com/bedroom/20250822_214457_20.html' target='_blank'>https://g11.gogamefun.com/bedroom/20250822_214457_20.html</a></li>
+<li><a href='https://g11.gogamefun.com/bedroom/20250823_103758_01.html' target='_blank'>https://g11.gogamefun.com/bedroom/20250823_103758_01.html</a></li>
+<li><a href='https://g11.gogamefun.com/bedroom/20250823_103758_02.html' target='_blank'>https://g11.gogamefun.com/bedroom/20250823_103758_02.html</a></li>
+<li><a href='https://g11.gogamefun.com/bedroom/20250823_103758_03.html' target='_blank'>https://g11.gogamefun.com/bedroom/20250823_103758_03.html</a></li>
+<li><a href='https://g11.gogamefun.com/bedroom/20250823_103758_04.html' target='_blank'>https://g11.gogamefun.com/bedroom/20250823_103758_04.html</a></li>
 <li><a href='https://g11.gogamefun.com/bedroom/page1.html' target='_blank'>https://g11.gogamefun.com/bedroom/page1.html</a></li>
 <li><a href='https://g11.gogamefun.com/bedroom/page2.html' target='_blank'>https://g11.gogamefun.com/bedroom/page2.html</a></li>
 <li><a href='https://g11.gogamefun.com/bedroom/page3.html' target='_blank'>https://g11.gogamefun.com/bedroom/page3.html</a></li>
@@ -171,6 +175,7 @@
 <li><a href='https://g11.gogamefun.com/bedroom/page6.html' target='_blank'>https://g11.gogamefun.com/bedroom/page6.html</a></li>
 <li><a href='https://g11.gogamefun.com/bedroom/page7.html' target='_blank'>https://g11.gogamefun.com/bedroom/page7.html</a></li>
 <li><a href='https://g11.gogamefun.com/bedroom/page8.html' target='_blank'>https://g11.gogamefun.com/bedroom/page8.html</a></li>
+<li><a href='https://g11.gogamefun.com/bedroom/page9.html' target='_blank'>https://g11.gogamefun.com/bedroom/page9.html</a></li>
 <li><a href='https://g11.gogamefun.com/dark/20250801_165728_01.html' target='_blank'>https://g11.gogamefun.com/dark/20250801_165728_01.html</a></li>
 <li><a href='https://g11.gogamefun.com/dark/20250801_165728_02.html' target='_blank'>https://g11.gogamefun.com/dark/20250801_165728_02.html</a></li>
 <li><a href='https://g11.gogamefun.com/dark/20250801_165728_03.html' target='_blank'>https://g11.gogamefun.com/dark/20250801_165728_03.html</a></li>
@@ -1648,46 +1653,3 @@
 <li><a href='https://g11.gogamefun.com/uniform/20250815_015945_05.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_05.html</a></li>
 <li><a href='https://g11.gogamefun.com/uniform/20250815_015945_06.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_06.html</a></li>
 <li><a href='https://g11.gogamefun.com/uniform/20250815_015945_07.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_07.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_08.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_08.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_09.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_09.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_10.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_10.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_11.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_11.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_12.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_12.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_13.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_13.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_14.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_14.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_15.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_15.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_16.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_16.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_17.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_17.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_18.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_18.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_19.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_19.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250815_015945_20.html' target='_blank'>https://g11.gogamefun.com/uniform/20250815_015945_20.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_01.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_01.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_02.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_02.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_03.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_03.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_04.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_04.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_05.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_05.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_06.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_06.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_07.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_07.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_08.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_08.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_09.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_09.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_10.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_10.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_11.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_11.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_12.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_12.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_13.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_13.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_14.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_14.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_15.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_15.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_16.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_16.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_17.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_17.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_18.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_18.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_19.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_19.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/20250822_220022_20.html' target='_blank'>https://g11.gogamefun.com/uniform/20250822_220022_20.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/page1.html' target='_blank'>https://g11.gogamefun.com/uniform/page1.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/page2.html' target='_blank'>https://g11.gogamefun.com/uniform/page2.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/page3.html' target='_blank'>https://g11.gogamefun.com/uniform/page3.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/page4.html' target='_blank'>https://g11.gogamefun.com/uniform/page4.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/page5.html' target='_blank'>https://g11.gogamefun.com/uniform/page5.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/page6.html' target='_blank'>https://g11.gogamefun.com/uniform/page6.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/page7.html' target='_blank'>https://g11.gogamefun.com/uniform/page7.html</a></li>
-<li><a href='https://g11.gogamefun.com/uniform/page8.html' target='_blank'>https://g11.gogamefun.com/uniform/page8.html</a></li>
-</ul>
-</body></html>
